--- a/css/translated.css
+++ b/css/translated.css
@@ -8,7 +8,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  position: relative;
+  position: sticky;
   border-bottom: 4px solid #147283;
   padding: 0rem 0;
   color: white;
@@ -17,27 +17,6 @@ header {
   header nav .menu {
     display: flex;
     gap: 2.2rem; }
-  header .navigation {
-    display: flex;
-    justify-content: center;
-    /* flex-basis: 60%; */ }
-  header nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  header .menu__link {
-    font-size: 1,8em;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 10px;
-    background-color: #03788e 0.8;
-    border: 0px solid #0db9d8 0.0;
-    /* border-radius: 5px; */
-    padding: 1rem 1.2rem; }
-  header .menu__link:hover {
-    /* background-color:#fff ; */
-    color: #026C78;
-    transition: 0.5s;
-    /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */ }
   header .navigation {
     display: flex;
     justify-content: center;
@@ -59,15 +38,6 @@ header {
     transform: scale(1.01, 1.01);
     transition: 0.3s;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2); }
-  header .hamburger {
-    display: none; }
-  header #hamburger {
-    display: none;
-    position: absolute;
-    bottom: 75px;
-    width: 32px;
-    height: 32px;
-    opacity: 0; }
 
 .footer {
   display: flex;
@@ -122,6 +92,31 @@ body {
   overflow-y: scroll;
   overflow-x: hidden; }
 
+html {
+  font-size: 62.5%;
+  /* margin:auto; */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
+
+body {
+  background-image: url("../img/blob-scene-haikei (1).svg");
+  background-size: 100vw;
+  background-position: center;
+  font-family: helvetica;
+  font-size: 1.6em;
+  color: white;
+  margin: 0;
+  padding: 0;
+  perspective: 1px;
+  /* transform-style: preserve-3d; */
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
 ul {
   list-style-type: none; }
 
@@ -130,36 +125,15 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  position: relative;
+  position: sticky;
   border-bottom: 4px solid #147283;
   padding: 0rem 0;
-  color: white;
+  color: #ffffff;
   font-family: helvetica;
   background: linear-gradient(to right, #03788e, #01a3a4); }
   header nav .menu {
     display: flex;
     gap: 2.2rem; }
-  header .navigation {
-    display: flex;
-    justify-content: center;
-    /* flex-basis: 60%; */ }
-  header nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  header .menu__link {
-    font-size: 1,8em;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 10px;
-    background-color: #03788e 0.8;
-    border: 0px solid #0db9d8 0.0;
-    /* border-radius: 5px; */
-    padding: 1rem 1.2rem; }
-  header .menu__link:hover {
-    /* background-color:#fff ; */
-    color: #026C78;
-    transition: 0.5s;
-    /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */ }
   header .navigation {
     display: flex;
     justify-content: center;
@@ -181,107 +155,6 @@ header {
     transform: scale(1.01, 1.01);
     transition: 0.3s;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2); }
-  header .hamburger {
-    display: none; }
-  header #hamburger {
-    display: none;
-    position: absolute;
-    bottom: 75px;
-    width: 32px;
-    height: 32px;
-    opacity: 0; }
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  color: white;
-  font-family: helvetica;
-  background: linear-gradient(to right, #03788e, #01a3a4); }
-  .footer nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  .footer .footerText {
-    display: flex;
-    justify-content: center;
-    color: white; }
-  .footer .footer__img {
-    max-width: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px; }
-
-.footerTexto {
-  color: white;
-  font-family: helvetica; }
-
-.mediaIcon {
-  width: 40px;
-  padding-top: 10px;
-  padding-bottom: 10px; }
-
-ul {
-  list-style-type: none; }
-
-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  position: relative;
-  border-bottom: 4px solid #147283;
-  padding: 0rem 0;
-  color: white;
-  font-family: helvetica;
-  background: linear-gradient(to right, #03788e, #01a3a4); }
-  header nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  header .navigation {
-    display: flex;
-    justify-content: center;
-    /* flex-basis: 60%; */ }
-  header nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  header .menu__link {
-    font-size: 1,8em;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 10px;
-    background-color: #147283 0.8;
-    border: 0px solid #01a3a4 0;
-    /* border-radius: 5px; */
-    padding: 1rem 1.2rem; }
-  header .menu__link:hover {
-    /* background-color:#fff ; */
-    color: #147283;
-    transition: 0.5s;
-    /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */ }
-  header .navigation {
-    display: flex;
-    justify-content: center;
-    /* flex-basis: 60%; */ }
-
-.header__logo {
-  flex-basis: 40%; }
-
-.header__img {
-  width: 70%;
-  max-width: 100px;
-  border: rgba(0, 0, 0, 0);
-  border-radius: 100%;
-  margin-top: 0.7rem;
-  margin-bottom: 0.7rem;
-  margin-left: 15%;
-  margin-right: 15%; }
-
-.header__img:hover {
-  opacity: 0.9;
-  max-width: 100px;
-  transform: scale(1.01, 1.01);
-  transition: 0.3s;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2); }
 
 .hamburger {
   display: none; }
@@ -294,66 +167,20 @@ header {
   height: 32px;
   opacity: 0; }
 
-.footer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  color: white;
-  font-family: helvetica;
-  background: linear-gradient(to right, #03788e, #01a3a4); }
-  .footer nav .menu {
-    display: flex;
-    gap: 2.2rem; }
-  .footer .footerText {
-    display: flex;
-    justify-content: center;
-    color: #ffffff; }
-  .footer .footer__img {
-    max-width: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px; }
-  @media screen and (min-device-width: 480px) and (max-device-width: 850px) {
-    .footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      background: linear-gradient(to right, #03788e, #01a3a4); } }
-
-.footerTexto {
+.menu .menu__link {
+  font-size: 1,8em;
   color: #ffffff;
-  font-family: helvetica; }
-
-.mediaIcon {
-  width: 40px;
-  padding-top: 10px;
-  padding-bottom: 10px; }
-
-html {
-  font-size: 62.5%;
-  /* margin:auto; */
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden; }
-
-body {
-  background-size: 100vw;
-  background-position: center;
-  font-family: helvetica;
-  font-size: 1.6em;
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-  perspective: 1px;
-  /* transform-style: preserve-3d; */
-  height: 100%;
-  width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden; }
+  text-decoration: none;
+  padding: 10px 10px;
+  background-color: #147283 0.8;
+  border: 0px solid #01a3a4 0;
+  /* border-radius: 5px; */
+  padding: 1rem 1.2rem; }
+  .menu .menu__link .menu__link:hover {
+    /* background-color:#fff ; */
+    color: #147283;
+    transition: 0.5s;
+    /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */ }
 
 /* MAIN */
 /* #mainGallery{
@@ -365,7 +192,7 @@ body {
   font-family: helvetica;
   font-style: bold;
   font-size: 4em;
-  color: white;
+  color: #ffffff;
   text-align: center;
   padding-top: 25rem;
   margin-left: 47%;
@@ -402,6 +229,9 @@ section#IMG5 {
 section#IMG6 {
   grid-area: IMG6; }
 
+.quienesSomos__h1 {
+  display: none; }
+
 .quienesSomos {
   display: flex;
   flex-wrap: nowrap;
@@ -418,45 +248,6 @@ section#IMG6 {
   border: #147283;
   border-radius: 15px;
   box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.3); }
-  .quienesSomos .quienesSomos__img {
-    display: block;
-    width: 40vw;
-    padding: 2rem;
-    border-radius: 15px; }
-  .quienesSomos .quienesSomos__title {
-    font-size: 3em;
-    color: #ffffff;
-    font-family: helvetica;
-    background: linear-gradient(to right, #03788e, #01a3a4);
-    border-radius: 5px;
-    width: 100%; }
-  .quienesSomos .quienesSomos__text {
-    font-size: 1.1em;
-    color: #01a3a4;
-    font-family: helvetica;
-    padding: 3rem;
-    text-align: justify; }
-  .quienesSomos .quienesSomos__button {
-    text-decoration: none;
-    font-size: 1.1em;
-    color: white;
-    background-color: #01a3a4;
-    border-radius: 5px;
-    font-family: helvetica;
-    padding: 1rem;
-    margin-left: 40%;
-    margin-right: 40%; }
-  .quienesSomos .quienesSomos__button:hover {
-    text-decoration: none;
-    font-size: 1.1em;
-    color: #01a3a4;
-    background-color: #ffffff;
-    border: 1px;
-    border-color: #01a3a4;
-    border-radius: 5px;
-    font-family: helvetica;
-    padding: 1rem;
-    text-align: justify; }
 
 .quienesSomosSection1 {
   display: flex;
@@ -465,6 +256,50 @@ section#IMG6 {
   justify-content: center;
   width: 40vw;
   padding: 2rem; }
+
+.quienesSomos .quienesSomos__img {
+  display: block;
+  width: 40vw;
+  padding: 2rem;
+  border-radius: 15px; }
+
+.quienesSomos .quienesSomos__title {
+  font-size: 3em;
+  color: #ffffff;
+  font-family: helvetica;
+  background: linear-gradient(to right, #03788e, #01a3a4);
+  border-radius: 5px;
+  width: 100%; }
+
+.quienesSomos .quienesSomos__text {
+  font-size: 1.1em;
+  color: #01a3a4;
+  font-family: helvetica;
+  padding: 3rem;
+  text-align: justify; }
+
+.quienesSomos .quienesSomos__button {
+  text-decoration: none;
+  font-size: 1.1em;
+  color: #ffffff;
+  background-color: #01a3a4;
+  border-radius: 5px;
+  font-family: helvetica;
+  padding: 1rem;
+  margin-left: 40%;
+  margin-right: 40%; }
+
+.quienesSomos .quienesSomos__button:hover {
+  text-decoration: none;
+  font-size: 1.1em;
+  color: #147283;
+  background-color: #ffffff;
+  border: 1px;
+  border-color: #01a3a4;
+  border-radius: 5px;
+  font-family: helvetica;
+  padding: 1rem;
+  text-align: justify; }
 
 /* BLUR + TEXTO SOBRE IMAGENES DE GALERIA */
 .textWithBlurredBg {
@@ -485,7 +320,7 @@ section#IMG6 {
   width: 100%;
   text-align: center;
   align-self: center;
-  color: #fff;
+  color: #ffffff;
   opacity: 0;
   transition: .3s; }
 
@@ -566,8 +401,42 @@ a {
   align-self: center; }
 
 article {
-  color: #01a3a4;
+  color: #147283;
   font-family: helvetica; }
+
+/*FOOTER*/
+.footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #ffffff;
+  font-family: helvetica;
+  background-color: linear-gradient(to right, #03788e, #01a3a4); }
+
+.footerTexto {
+  color: #ffffff;
+  font-family: helvetica; }
+
+footer nav .menu {
+  display: flex;
+  gap: 2.2rem; }
+
+footer .footerText {
+  display: flex;
+  justify-content: center;
+  color: #ffffff; }
+
+footer .footer__img {
+  text-decoration: none;
+  max-width: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px; }
+
+.mediaIcon {
+  width: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px; }
 
 /* OTROS */
 h5 {
@@ -587,14 +456,14 @@ P {
 
 #cardText {
   font-size: 1.1em;
-  color: #01a3a4;
+  color: #147283;
   font-family: helvetica;
   padding: 3rem;
   text-align: justify; }
 
 #cardTitle {
   font-size: 2.1em;
-  color: #01a3a4;
+  color: #147283;
   font-family: helvetica;
   padding: 1rem;
   text-align: center; }
@@ -605,12 +474,14 @@ P {
 
 hr {
   width: 80%;
-  color: #01a3a4;
+  color: #147283;
   margin-left: 10%;
   margin-right: 10%;
   position: center; }
 
 @media screen and (max-width: 480px) {
+  body {
+    background-image: none; }
   header {
     display: flex;
     flex-direction: column;
@@ -618,7 +489,7 @@ hr {
     justify-content: center;
     border-bottom: 4px solid #147283;
     padding: 0rem 0;
-    color: white;
+    color: #ffffff;
     font-family: helvetica;
     background: linear-gradient(to right, #03788e, #01a3a4);
     width: 100vw; }
@@ -668,13 +539,13 @@ hr {
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    background-color: white;
+    background-color: #ffffff;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
     margin-bottom: 3rem;
     width: 80vw;
-    border: #026C78;
+    border: #147283;
     border-radius: 15px;
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.3); }
   .quienesSomosSection1 {
@@ -693,7 +564,7 @@ hr {
     border-radius: 15px; }
   .quienesSomos .quienesSomos__title {
     font-size: 3em;
-    color: white;
+    color: #ffffff;
     font-family: helvetica;
     background: linear-gradient(to right, #03788e, #01a3a4);
     text-align: center;
@@ -703,7 +574,7 @@ hr {
   .quienesSomos .quienesSomos__text {
     font-size: 1.1em;
     width: 80%;
-    color: #0099a0;
+    color: #147283;
     font-family: helvetica;
     padding: 0rem;
     text-align: justify; }
@@ -711,7 +582,7 @@ hr {
     text-decoration: none;
     font-size: 1em;
     color: white;
-    background-color: #0099a0;
+    background-color: #01a3a4;
     border-radius: 5px;
     margin-left: 0;
     margin-right: 0;
@@ -754,6 +625,172 @@ hr {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: #ffffff;
     font-family: helvetica;
+    background: linear-gradient(to right, #03788e, #01a3a4); } }
+
+@media screen and (min-device-width: 480px) and (max-device-width: 1080px) {
+  body {
+    background-image: none; }
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 4px solid #147283;
+    padding: 0rem 0;
+    color: #ffffff;
+    font-family: helvetica;
+    background: linear-gradient(to right, #03788e, #01a3a4);
+    width: 100vw; }
+    header .navigation {
+      display: block;
+      margin-top: 20px; }
+  /* .hamburger {
+        display: block;
+    }
+    #hamburger {
+        display: block;
+        position: absolute;
+        top: 95px;
+        width: 32px;
+        height: 32px;
+        opacity: 0;
+    } */
+  #hamburger:checked ~ .navigation {
+    display: block; }
+  #hamburger:checked ~ nav .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+  header .navigation {
+    display: block;
+    margin-top: 20px; }
+  #h1titles {
+    font-family: helvetica;
+    font-size: 4em;
+    /* color: #026C78; */
+    background: -webkit-linear-gradient(#03788e, #01a3a4);
+    -webkit-background-clip: text;
+    background-clip: none;
+    -webkit-text-fill-color: transparent;
+    color: #147283;
+    text-align: center;
+    padding: 0rem; }
+  #grilla {
+    display: flex;
+    flex-direction: column;
+    /* grid-template-areas:
+            "IMG1 IMG1 IMG1 IMG2 IMG2 IMG2"
+            "IMG3 IMG3 IMG4 IMG4 IMG5 IMG5"
+            "IMG6 IMG6 IMG6 IMG6 IMG5 IMG5";
+        grid-template-rows:repeat(12 1fr);
+        /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
+    gap: 1.5rem;
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.5rem; }
+  /* header nav .menu {
+        display: none;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap:2.2rem;
+    } */
+  .quienesSomos {
+    display: flex;
+    /* flex-wrap:nowrap; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background-color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    width: 80vw;
+    border: #147283;
+    border-radius: 15px;
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.3); }
+  .quienesSomosSection1 {
+    /* box-sizing:border-box; */
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90vw;
+    padding: 0rem; }
+  .quienesSomos .quienesSomos__img {
+    display: none;
+    width: 90vw;
+    padding: 2rem;
+    border-radius: 15px; }
+  .quienesSomos .quienesSomos__title {
+    font-size: 3em;
+    color: #ffffff;
+    font-family: helvetica;
+    background: linear-gradient(to right, #03788e, #01a3a4);
+    text-align: center;
+    border-radius: 5px;
+    width: 80%;
+    margin-top: 2rem; }
+  .quienesSomos .quienesSomos__text {
+    font-size: 1.1em;
+    width: 80%;
+    color: #0099a0;
+    font-family: helvetica;
+    padding: 0rem;
+    text-align: justify; }
+  .quienesSomos .quienesSomos__button {
+    text-decoration: none;
+    font-size: 1em;
+    color: #ffffff;
+    background-color: #01a3a4;
+    border-radius: 5px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 5px;
+    font-family: helvetica;
+    padding: 0.5rem;
+    align-self: center; }
+  .parallax1 {
+    background: url(../img/edificio.png);
+    background-size: 100vw;
+    height: 42%;
+    align-items: center;
+    background-repeat: no-repeat; }
+  .parallax2 {
+    background: url(../img/quienes_somos.jfif);
+    background-size: 100vw;
+    height: 42%;
+    align-items: center;
+    background-repeat: no-repeat; }
+  .parallax3 {
+    background: url(../img/b1.png);
+    background-size: 100vw;
+    height: 42%;
+    align-items: center;
+    background-repeat: no-repeat; }
+  .parallax4 {
+    background: url(../img/b4.png);
+    background-size: 100vw;
+    height: 42%;
+    align-items: center;
+    background-repeat: no-repeat; }
+  .parallax5 {
+    background: url(../img/b5.png);
+    background-size: 100vw;
+    height: 42%;
+    align-items: center;
+    background-repeat: no-repeat; }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
     background: linear-gradient(to right, #03788e, #01a3a4); } }
