--- a/sass/misc/_normalize.scss
+++ b/sass/misc/_normalize.scss
@@ -3,7 +3,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    position: relative;
+    position: sticky;
     border-bottom: 4px solid #147283;
     padding: 0rem 0;
     color: white;
@@ -20,40 +20,14 @@ header {
         justify-content: center;
         /* flex-basis: 60%; */
     }
-
-    nav .menu {
-        display: flex;
-        gap:2.2rem;
-    }
-
-        .menu__link {
-            font-size: 1,8em;
-            color: #fff;
-            text-decoration: none;
-            padding:10px 10px;
-            background-color: #03788e 0.8;
-            border:0px solid #0db9d8 0.0;
-            /* border-radius: 5px; */
-            padding: 1rem 1.2rem;
-        }
-        
-        .menu__link:hover {
-            /* background-color:#fff ; */
-            color:#026C78;
-            transition: 0.5s;
-            /* box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1); */
-        }
     
-    .navigation {
-        display: flex;
-        justify-content: center;
-        /* flex-basis: 60%; */
-    }
-
+    
     .header__logo {
         flex-basis: 40%;
     }
-     
+    
+    
+    
     
     .header__img {
         width: 70%;
@@ -73,23 +47,8 @@ header {
         transition: 0.3s;
         box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
     }
-    
-    
-    .hamburger {
-        display: none;
-    }
-    
-    #hamburger {
-        display: none;
-        position: absolute;
-        bottom: 75px;
-        width: 32px;
-        height: 32px;
-        opacity: 0;
-    }
-
-
 }
+
 
 // FOOTER
 
