--- a/sass/misc/_mixins.scss
+++ b/sass/misc/_mixins.scss
@@ -4,9 +4,58 @@
 }
     
 
+// @mixin headermv (){
+//     @media screen and (max-device-width: 480px){
+//         header{
+//             display: flex;
+//             flex-direction: column;
+//             align-items: center;
+//             justify-content: center;
+//             border-bottom: 4px solid $color-principal;
+//             padding: 0rem 0;
+//             color: $color-secundario;
+//             font-family: helvetica;
+//             background: $gradient;
+//             width: 100vw;
+    
+//             .navigation {
+//                 display: none;
+//             }
+//         }
+//     }
+
+//     @media screen and (min-device-width: 481px) and (max-device-width: 850px){
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//         border-bottom: 4px solid $color-principal;
+//         padding: 0rem 0;
+//         color: $color-secundario;
+//         font-family: helvetica;
+//         background: $gradient;
+//         width: 100vw;
+
+//         .navigation {
+//             display: block;
+//             margin-top: 20px;
+//         }
+//     }
+// }
+
+
 
 @mixin footermv(){
-    @media screen and (min-device-width: 480px) and (max-device-width: 850px){
+    @media screen and (max-device-width: 480px){
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        background: linear-gradient(to right, #03788e, #01a3a4);
+
+    }
+    @media screen and (min-device-width: 481px) and (max-device-width: 850px){
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -16,23 +65,3 @@
 
     }
 }
-
-// @mixin footer (flex ,row, center, space-evenly, white, helvetica, linear-gradient(to right, #03788e, #01a3a4)){
-//     display: flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-evenly;
-//     color: white;
-//     font-family: helvetica;
-//     background: linear-gradient(to right, #03788e, #01a3a4);
-// }
-
-// @mixin footer (flex ,row, center, space-evenly, white, helvetica, linear-gradient(to right, #03788e, #01a3a4)){
-//     display: flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-evenly;
-//     color: white;
-//     font-family: helvetica;
-//     background: linear-gradient(to right, #03788e, #01a3a4);
-// }
